--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,19 @@ body{
     font-weight: bolder;
     font-family: 'Gloria Hallelujah', cursive;
 }
+@keyframes example {
+    from {background-color:rgb(90, 31, 185);}
+    to {background-color: rgb(16, 16, 172);}
+  }
+  #playButton{
+        width: 100px;
+        height: 100px;
+        background-color: rgb(0, 153, 255);
+        animation-name: example;
+        animation-duration: 0.5s;
+        animation-iteration-count: infinite;
+      }
+  }
 .btn{
     font-size: 22.5px;
     background-color: #7e0f8d;
